<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/blackwave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:layout_width="268dp"
        android:layout_height="68dp"
        android:fontFamily="@font/segoeuib"
        android:gravity="center"
        android:text="UPDATE RECORDS"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <View
        android:layout_width="245dp"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/Detail"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:background="@drawable/greenish"
        android:fontFamily="@font/segoeuib"
        android:gravity="center"
        android:text="@string/enter_the_details"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="362dp"
        android:layout_height="379dp"
        android:background="@drawable/blakish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593">

        <EditText
            android:id="@+id/nameFieldUpdate"
            android:layout_width="346dp"
            android:layout_height="58dp"
            android:drawableStart="@drawable/profile"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.246" />

        <EditText
            android:id="@+id/emailFieldUpdate"
            android:layout_width="346dp"
            android:layout_height="58dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454" />

        <EditText
            android:id="@+id/idFieldUpdate"
            android:layout_width="346dp"
            android:layout_height="58dp"
            android:drawableStart="@drawable/id"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:hint="@string/student_id"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

        <EditText
            android:id="@+id/contactFieldUpdate"
            android:layout_width="346dp"
            android:layout_height="58dp"
            android:drawableStart="@drawable/contact"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:hint="@string/contact"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.669" />

        <EditText
            android:id="@+id/courseFieldUpdate"
            android:layout_width="346dp"
            android:layout_height="58dp"
            android:drawableStart="@drawable/course"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:hint="@string/course"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/backButtonUpdate"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/updateButtonUpdate"
        android:layout_width="263dp"
        android:layout_height="91dp"
        android:background="@drawable/blakish"
        android:fontFamily="@font/segoeuib"
        android:text="@string/update_record"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

</androidx.constraintlayout.widget.ConstraintLayout>