<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/blackwave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:layout_width="268dp"
        android:layout_height="68dp"
        android:fontFamily="@font/segoeuib"
        android:gravity="center"
        android:text="@string/add_new_record"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <View
        android:layout_width="245dp"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/Detail"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:background="@drawable/greenish"
        android:fontFamily="@font/segoeuib"
        android:gravity="center"
        android:text="@string/enter_the_details"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <EditText
        android:id="@+id/nameFieldTeacher"
        android:layout_width="346dp"
        android:layout_height="58dp"
        android:drawableStart="@drawable/profile"
        android:drawablePadding="5dp"
        android:drawableTint="@color/white"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender:"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

    <RadioGroup
        android:layout_width="271dp"
        android:layout_height="66dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386">

        <RadioGroup
            android:id="@+id/teachersexGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.657"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.386">

            <RadioButton
                android:id="@+id/teacherMale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="55dp"
                android:layout_weight="1"
                android:text="MALE"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/teacherFemale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="-30dp"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RadioGroup>

    </RadioGroup>

    <EditText
        android:id="@+id/emailFieldTeacher"
        android:layout_width="346dp"
        android:layout_height="58dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:drawableTint="@color/white"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <EditText
        android:id="@+id/idFieldTeacher"
        android:layout_width="346dp"
        android:layout_height="58dp"
        android:drawableStart="@drawable/id"
        android:drawablePadding="5dp"
        android:drawableTint="@color/white"
        android:hint="@string/teacher_s_id"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <EditText
        android:id="@+id/contactFieldTeacher"
        android:layout_width="346dp"
        android:layout_height="58dp"
        android:drawableStart="@drawable/contact"
        android:drawablePadding="5dp"
        android:drawableTint="@color/white"
        android:hint="@string/contact"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <Spinner
        android:id="@+id/subjectSpinner"
        android:layout_width="346dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenish"
        android:entries="@array/subject_array"
        android:textColor="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactFieldTeacher" />

    <ImageView
        android:id="@+id/teacherBack"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/addButtonTeacher"
        android:layout_width="267dp"
        android:layout_height="80dp"
        android:background="@drawable/blakish"
        android:fontFamily="@font/segoeuib"
        android:text="@string/add_record"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />


    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="351dp"-->
<!--        android:layout_height="397dp"-->
<!--        android:background="@drawable/gradient4"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.45"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.622">-->


<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>